Fix alignement of pagewrap.

--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -30,6 +30,9 @@ body {
     height: 100%;
     margin: 0 auto;
     overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .header {
